--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="css/main.css" rel="stylesheet">
-  <title>Document</title>
-  <style>
-    body {
-      background-color: #000000;
-    }
-  </style>
+  <title>JoseSan-2018</title>
 </head>
 <body>
   <div id="app"></div>
+  <h1>Jose Sánchez</h1>
   <script type="text/javascript" src="/js/app.js"></script>
 </body>
 </html>
