--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="css/main.css" rel="stylesheet">
-  <title>JoseSan-2018</title>
+  <title>Sánchez</title>
 </head>
 <body>
   <script type="text/javascript" src="/js/app.js"></script>
