--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="css/main.css" rel="stylesheet">
+  <link rel="preload" as="font" href="fonts/leagueMono.ttf" type="font/ttf" crossorigin />
+  <link rel="preload" as="font" href="fonts/EleBlack.otf" type="font/otf" crossorigin />
+  <link rel="preload" as="font" href="fonts/EleMedium.otf" type="font/otf" crossorigin />
+
   <title>Sánchez</title>
 </head>
 <body>
