--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="css/main.css" rel="stylesheet">
+  <link rel="icon" type="image/png" href="img/favicon.png">
   <link rel="preload" as="font" href="fonts/leagueMono.ttf" type="font/ttf" crossorigin />
   <link rel="preload" as="font" href="fonts/EleBlack.otf" type="font/otf" crossorigin />
   <link rel="preload" as="font" href="fonts/EleMedium.otf" type="font/otf" crossorigin />
