--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,41 @@
   <link rel="preload" as="font" href="fonts/EleBlack.otf" type="font/otf" crossorigin />
   <link rel="preload" as="font" href="fonts/EleMedium.otf" type="font/otf" crossorigin />
 
+  <!-- update the version number as needed -->
+  <script defer src="/__/firebase/5.5.0/firebase-app.js"></script>
+  <!-- include only the Firebase features as you need -->
+  <script defer src="/__/firebase/5.5.0/firebase-auth.js"></script>
+  <script defer src="/__/firebase/5.5.0/firebase-database.js"></script>
+  <script defer src="/__/firebase/5.5.0/firebase-messaging.js"></script>
+  <script defer src="/__/firebase/5.5.0/firebase-storage.js"></script>
+  <!-- initialize the SDK after all desired features are loaded -->
+  <script defer src="/__/firebase/init.js"></script>
+
   <title>Sánchez</title>
 </head>
 <body>
+  <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
+        // // The Firebase SDK is initialized and available here!
+        //
+        // firebase.auth().onAuthStateChanged(user => { });
+        // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
+        // firebase.messaging().requestPermission().then(() => { });
+        // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
+        //
+        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
+
+        try {
+          let app = firebase.app();
+          let features = ['auth', 'database', 'messaging', 'storage'].filter(feature => typeof app[feature] === 'function');
+          document.getElementById('load').innerHTML = `Firebase SDK loaded with ${features.join(', ')}`;
+        } catch (e) {
+          console.error(e);
+          document.getElementById('load').innerHTML = 'Error loading the Firebase SDK, check the console.';
+        }
+      });
+  </script>
   <script type="text/javascript" src="/js/app.js"></script>
 </body>
 </html>
