--- a/src/404.html
+++ b/src/404.html
@@ -1,16 +1,17 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="css/main.css" rel="stylesheet" defer>
+  <link href="css/main.css" rel="stylesheet">
   <link rel="icon" type="image/png" href="img/favicon.png">
   <link rel="preload" as="font" href="fonts/leagueMono.ttf" type="font/ttf" crossorigin />
   <link rel="preload" as="font" href="fonts/EleBlack.otf" type="font/otf" crossorigin />
   <link rel="preload" as="font" href="fonts/EleMedium.otf" type="font/otf" crossorigin />
   <script src="https://www.gstatic.com/firebasejs/5.5.0/firebase.js"></script>
-  <script defer>
+  <script>
     // Initialize Firebase
     var config = {
       apiKey: "AIzaSyAqok_JpP5AifcplMQxRXzBwOK8HS_H2ic",
@@ -26,6 +27,15 @@
   <title>Sánchez</title>
 </head>
 <body>
-  <script type="text/javascript" src="/js/app.js"></script>
+  <div id="error-wrapper">
+    <div class="error-container">
+      <div class="my-name">
+        404
+        <p class="message">
+          No recuerdo donde lo dejé 🤭
+        </p>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
