--- a/src/index.html
+++ b/src/index.html
@@ -4,47 +4,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="css/main.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet" defer>
   <link rel="icon" type="image/png" href="img/favicon.png">
   <link rel="preload" as="font" href="fonts/leagueMono.ttf" type="font/ttf" crossorigin />
   <link rel="preload" as="font" href="fonts/EleBlack.otf" type="font/otf" crossorigin />
   <link rel="preload" as="font" href="fonts/EleMedium.otf" type="font/otf" crossorigin />
-
-  <!-- update the version number as needed -->
-  <script defer src="/__/firebase/5.5.0/firebase-app.js"></script>
-  <!-- include only the Firebase features as you need -->
-  <script defer src="/__/firebase/5.5.0/firebase-auth.js"></script>
-  <script defer src="/__/firebase/5.5.0/firebase-database.js"></script>
-  <script defer src="/__/firebase/5.5.0/firebase-messaging.js"></script>
-  <script defer src="/__/firebase/5.5.0/firebase-storage.js"></script>
-  <!-- initialize the SDK after all desired features are loaded -->
-  <script defer src="/__/firebase/init.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.5.0/firebase.js"></script>
+  <script defer>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyAqok_JpP5AifcplMQxRXzBwOK8HS_H2ic",
+      authDomain: "portfolio-216503.firebaseapp.com",
+      databaseURL: "https://portfolio-216503.firebaseio.com",
+      projectId: "portfolio-216503",
+      storageBucket: "portfolio-216503.appspot.com",
+      messagingSenderId: "353013227954"
+    };
+    firebase.initializeApp(config);
+  </script>
 
   <title>Sánchez</title>
 </head>
 <body>
-  <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-        // // The Firebase SDK is initialized and available here!
-        //
-        // firebase.auth().onAuthStateChanged(user => { });
-        // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
-        // firebase.messaging().requestPermission().then(() => { });
-        // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
-        //
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-
-        try {
-          let app = firebase.app();
-          let features = ['auth', 'database', 'messaging', 'storage'].filter(feature => typeof app[feature] === 'function');
-          document.getElementById('load').innerHTML = `Firebase SDK loaded with ${features.join(', ')}`;
-        } catch (e) {
-          console.error(e);
-          document.getElementById('load').innerHTML = 'Error loading the Firebase SDK, check the console.';
-        }
-      });
-  </script>
   <script type="text/javascript" src="/js/app.js"></script>
 </body>
 </html>
